# tap-gitlab

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  config.json  first_tap.py  meltano.yml  pyproject.toml  requirements.txt  setup.py  tap_first.py  tap_gitlab.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml
.secrets/: .gitignore  config.json.template
archive/: .gitignore  README.md  setup.py
archive/tap_gitlab/: __init__.py
archive/tap_gitlab/schemas/: epics.json  group_labels.json  issues.json  milestones.json  project_members.json  project_variables.json  users.json
caches/: a2c465921776efb7.yaml  ecee16541b66f8c7.yaml
tap_gitlab/: __init__.py  caching.py  client.py  streams.py  tap.py  transforms.py
tap_gitlab/schemas/: branches.json  bridges.json  commits.json  epic_issues.json  epics.json  group_labels.json  group_members.json  group_projects.json  group_variables.json  groups.json  issues.json  jobs.json  merge_request_commits.json  merge_requests.json  milestones.json  pipelines.json  pipelines_extended.json  project_labels.json  project_members.json  projects.json  releases.json  subgroups.json  tags.json  users.json  vulnerabilities.json
tap_gitlab/tests/: __init__.py  test_core.py
tests/: test_core.py
