[tool.poetry]
name = "tap-gitlab"
version = "2.0.0-alpha3"
description = "`tap-gitlab` is a Singer tap for GitLab, built with the Meltano SDK for Singer Taps."
authors = ["Meltano and Meltano Community"]
keywords = [
    "ELT",
    "GitLab",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.5.0"
requests-cache = "^0.9.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.3.0"
pydocstyle = "^6.1.1"
mypy = "^0.961"
types-requests = "^2.27.1"
isort = "^5.10.1"
types-python-dateutil = "^2.8.10"
python-dotenv = "^0.20.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_gitlab"

[build-system]
# Uncomment the pinned version in favor of the git URL once
# https://github.com/python-poetry/poetry-core/pull/257 is merged
# and a new poetry-core 1.0.x is released
# requires = ["poetry-core>=1.0.0"]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-gitlab = 'tap_gitlab.tap:TapGitLab.cli'
